argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    # cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    # certmanager.k8s.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - dev-argocd.example.com
    # secretName: argocd-tls-secret
  rules:
  - host: dev-argocd.example.com
    http:
      paths:
        - path: /argocd
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 8080
